# weather-cli

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  run.py
tests/: test_weather_terminal_app.py
weather_cli/: app.py
weather_cli/controller/: controller.py
weather_cli/model/: model.py
weather_cli/view/: interface.py  view.py
weather_terminal_app/: controller.py  controllers.py  model.py  models.py  view.py
weather_terminal_app/controller/: controller.py
weather_terminal_app/model/: model.py
weather_terminal_app/view/: interface.py  view.py
