[tool.poetry]
name = "Weather-Terminal-App"
version = "0.1.0"
description = ""
authors = ["Ruchir Chawdhry <ruchir.github@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3"
vyper-config = "^0.4.0"
requests = "^2.22"
cnamedtuple = "^0.1.6"
requests_cache = "^0.5.2"
pendulum = "^2.0"
questionary = "^1.3"
click = "^7.0"
pltable = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
